--- a/assets/css/pages/_home.css
+++ b/assets/css/pages/_home.css
@@ -1,6 +1,4 @@
 .c-home.a-show {
-  padding-bottom: 12rem;
-
   .cinema {
     padding-top: 0;
     padding-bottom: 0;
